Fixed overflow on .WorkoutPlanDayExerciseEditor_exerciseName

--- a/src/components/WorkoutPlanEditor/components/WorkoutPlanDayExerciseEditor/WorkoutPlanDayExerciseEditor.module.scss
+++ b/src/components/WorkoutPlanEditor/components/WorkoutPlanDayExerciseEditor/WorkoutPlanDayExerciseEditor.module.scss
@@ -24,7 +24,7 @@
   &Name {
     font-size: 0.8rem;
     text-overflow: ellipsis;
-    overflow-x: hidden;
+    overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
